--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
         <logback.version>1.2.3</logback.version>
         <vavr.version>0.10.3</vavr.version>
         <slf4j.version>1.7.30</slf4j.version>
+
+        <sonar.projectKey>ShowMeYourCodeYouTube_java-sorting-algorithms</sonar.projectKey>
+        <sonar.organization>showmeyourcodeyoutube</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
