--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.showmeyourcode.algorithms</groupId>
     <artifactId>sorting</artifactId>
     <packaging>jar</packaging>
+    <name>Java sorting algorithms</name>
+
     <version>2.0.1-SNAPSHOT</version>
 
     <properties>
