--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
     <name>Java sorting algorithms</name>
 
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
 
     <properties>
         <java.version>11</java.version>
