--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <packaging>jar</packaging>
     <name>Java sorting algorithms</name>
 
-    <version>2.4.0-SNAPSHOT</version>
+    <version>2.4.0</version>
 
     <properties>
         <java.version>11</java.version>
