--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
   - build
   - test
   - analysis
+  - deploy
 
 build:
   stage: build
@@ -22,10 +23,16 @@ test:
   script:
     - mvn verify
     - cat target/site/jacoco/index.html | grep -o '<tfoot>.*</tfoot>'
+  coverage: '/Total.*?([0-9]{1,3})%/'
   artifacts:
-    when: always
+    paths:
+      - target/site/jacoco/*
     reports:
-      junit: target/surefire-reports/TEST-*.xml
+      junit:
+        - "**/target/surefire-reports/TEST-*.xml"
+        - "**/target/failsafe-reports/TEST-*.xml"
+    expire_in: 1 hour
+
 
 sonarcloud-check:
   stage: analysis
@@ -39,3 +46,21 @@ sonarcloud-check:
     - merge_requests
     - master
     - develop
+
+pages:
+  stage: deploy
+  script:
+    - echo 'Cleaning old pages'
+    - rm -rf public
+    - ls -la
+    - mkdir -p public && cp -r target/site/jacoco/* public
+    - ls -la ./public
+  artifacts:
+    paths:
+      - public
+    expire_in: 1 hour
+  only:
+    - master
+    - develop
+    - development
+
