--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
@@ -126,4 +134,11 @@
             </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <url>https://gitlab.com/ShowMeYourCodeYouTube/java-sorting-algorithms</url>
+        <connection>scm:git:https://gitlab.com/ShowMeYourCodeYouTube/java-sorting-algorithms.git</connection>
+        <developerConnection>scm:git:https://gitlab.com/ShowMeYourCodeYouTube/java-sorting-algorithms</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 </project>
