--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.showmeyourcode.algorithms</groupId>
     <artifactId>sorting</artifactId>
     <packaging>jar</packaging>
     <name>Java sorting algorithms</name>
 
-    <version>2.6.0-SNAPSHOT</version>
+    <version>2.6.0</version>
 
     <properties>
         <java.version>11</java.version>
@@ -139,6 +137,6 @@
         <url>https://gitlab.com/ShowMeYourCodeYouTube/java-sorting-algorithms</url>
         <connection>scm:git:https://gitlab.com/ShowMeYourCodeYouTube/java-sorting-algorithms.git</connection>
         <developerConnection>scm:git:https://gitlab.com/ShowMeYourCodeYouTube/java-sorting-algorithms</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v2.6.0</tag>
     </scm>
 </project>
