--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <packaging>jar</packaging>
     <name>Java sorting algorithms</name>
 
-    <version>2.6.0</version>
+    <version>2.6.1-SNAPSHOT</version>
 
     <properties>
         <java.version>11</java.version>
@@ -137,6 +137,6 @@
         <url>https://gitlab.com/ShowMeYourCodeYouTube/java-sorting-algorithms</url>
         <connection>scm:git:https://gitlab.com/ShowMeYourCodeYouTube/java-sorting-algorithms.git</connection>
         <developerConnection>scm:git:https://gitlab.com/ShowMeYourCodeYouTube/java-sorting-algorithms</developerConnection>
-        <tag>v2.6.0</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
