--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 default:
-  image: amazoncorretto:11.0.7
+  image: amazoncorretto:17.0.8@sha256:6e0e9ae23c70d10b4c897ee93c48bcf4d1ae4f79a0d80ae6991b1c17213d441c
   before_script:
     - ': before_script'
     - chmod +x mvnw
