--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <junit-params.version>5.7.0</junit-params.version>
         <mockito.version>3.12.4</mockito.version>
         <mockito-junit-jupiter.version>3.12.4</mockito-junit-jupiter.version>
+        <javafaker.version>1.0.2</javafaker.version>
         <logcaptor.version>2.9.0</logcaptor.version>
         <jacoco.version>0.8.10</jacoco.version>
         <lombok.version>1.18.22</lombok.version>
@@ -83,6 +84,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>${mockito-junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${javafaker.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
