feat: introduce new benchmark settings to application.properties
Make an application configurable by introducing: benchmark.dataset.sizes and benchmark.results-file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 sorting-data.range.max=10000
 sorting-data.size=10000
 generated-dataset.size=150000
+benchmark.dataset.sizes=10000,50000,100000,150000
+benchmark.results-file=results.txt
