--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,3 +2,5 @@
 sorting-data.range.max=1000
 sorting-data.size=1000
 generated-dataset.size=10000
+benchmark.dataset.sizes=10000,50000
+benchmark.results-file=test-results.txt
