--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ target/
 # Maven release plugin
 /pom.xml.releaseBackup
 /release.properties
+
+# Project test resources
+/src/main/resources/benchmark/test-results.txt
