--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,15 +41,10 @@ mutation-test:
   stage: test
   script:
     - ./mvnw test-compile org.pitest:pitest-maven:mutationCoverage $MAVEN_OPTS
-#  coverage: '/Total.*?([0-9]{1,3})%/'
-#  artifacts:
-#    paths:
-#      - target/site/jacoco/*
-#    reports:
-#      junit:
-#        - "**/target/surefire-reports/TEST-*.xml"
-#        - "**/target/failsafe-reports/TEST-*.xml"
-#    expire_in: 1 hour
+  artifacts:
+    paths:
+      - target/pit-reports/*
+    expire_in: 1 hour
 
 build:
   stage: build
@@ -85,6 +80,7 @@ pages:
     - rm -rf public
     - ls -la
     - mkdir -p public/test-report && cp -r target/site/jacoco/* public/test-report
+    - mkdir -p public/pitest-report && cp -r target/pit-reports/* public/pitest-report
     - ls -la ./public
   artifacts:
     paths:
