test: configure the mutation library PITest

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,15 @@ test:
         - "**/target/failsafe-reports/TEST-*.xml"
     expire_in: 1 hour
 
+mutation-test:
+  stage: test
+  script:
+    - ./mvnw test-compile org.pitest:pitest-maven:mutationCoverage $MAVEN_OPTS
+  artifacts:
+    paths:
+      - target/pit-reports/*
+    expire_in: 1 hour
+
 build:
   stage: build
   script:
@@ -71,6 +80,7 @@ pages:
     - rm -rf public
     - ls -la
     - mkdir -p public/test-report && cp -r target/site/jacoco/* public/test-report
+    - mkdir -p public/pitest-report && cp -r target/pit-reports/* public/pitest-report
     - ls -la ./public
   artifacts:
     paths:
