--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 default:
-  image: amazoncorretto:17.0.8@sha256:6e0e9ae23c70d10b4c897ee93c48bcf4d1ae4f79a0d80ae6991b1c17213d441c
+  image: amazoncorretto:17.0.8@sha256:eaa4ff4026b888b602b9cef6875a7b763ab4b3076f1257c14237bd31bea54167
   before_script:
     - ': before_script'
     - chmod +x mvnw
@@ -37,6 +37,15 @@ test:
         - "**/target/failsafe-reports/TEST-*.xml"
     expire_in: 1 hour
 
+mutation-test:
+  stage: test
+  script:
+    - ./mvnw test-compile org.pitest:pitest-maven:mutationCoverage $MAVEN_OPTS
+  artifacts:
+    paths:
+      - target/pit-reports/*
+    expire_in: 1 hour
+
 build:
   stage: build
   script:
@@ -71,6 +80,7 @@ pages:
     - rm -rf public
     - ls -la
     - mkdir -p public/test-report && cp -r target/site/jacoco/* public/test-report
+    - mkdir -p public/pitest-report && cp -r target/pit-reports/* public/pitest-report
     - ls -la ./public
   artifacts:
     paths:
