--- a/pom.xml
+++ b/pom.xml
@@ -15,21 +15,23 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
-        <jmh.version>1.36</jmh.version>
-        <logback.version>1.2.3</logback.version>
+        <jmh.version>1.37</jmh.version>
+        <logback.version>1.4.11</logback.version>
         <javatuples.version>1.2</javatuples.version>
-        <slf4j.version>1.7.30</slf4j.version>
+        <slf4j.version>2.0.9</slf4j.version>
         <javafaker.version>1.0.2</javafaker.version>
         <logcaptor.version>2.9.0</logcaptor.version>
         <jacoco.version>0.8.10</jacoco.version>
-        <lombok.version>1.18.22</lombok.version>
-        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
-        <maven-test-plugin.version>2.22.2</maven-test-plugin.version>
-        <gmavenplus-plugin.version>1.13.1</gmavenplus-plugin.version>
-        <groovy.version>3.0.9</groovy.version>
-        <spock.version>2.0-groovy-3.0</spock.version>
-        <spring-test.version>5.3.16</spring-test.version>
+        <lombok.version>1.18.30</lombok.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-test-plugin.version>3.1.2</maven-test-plugin.version>
+        <gmavenplus-plugin.version>3.0.2</gmavenplus-plugin.version>
+        <groovy.version>3.0.22</groovy.version>
+        <spock.version>2.3-groovy-4.0</spock.version>
+        <spring-test.version>6.0.12</spring-test.version>
         <gclib.version>3.3.0</gclib.version>
+        <pitest-maven.version>1.15.3</pitest-maven.version>
+        <pitest-junit5-plugin.version>1.2.1</pitest-junit5-plugin.version>
 
         <sonar.organization>showmeyourcodeyoutube</sonar.organization>
         <sonar.exclusions>**/launcher/SortingAlgorithmsAppLauncher*, **/launcher/AlgorithmsMicrobenchmark*, **/launcher/jmh_generated/*</sonar.exclusions>
@@ -231,6 +233,23 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>${pitest-maven.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-junit5-plugin</artifactId>
+                        <version>${pitest-junit5-plugin.version}</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <targetTests>
+                        <param>com.showmeyourcode.projects.algorithms.algorithm*</param>
+                    </targetTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
